CHATS_SIT/force-app/main/default/objects/T_CBMS_ADDNL_INFO__c.object
<CustomObject>
    <description>Information about TANF and EF cases captured through CHATS application</description>
  <!--  <enableChangeDataCapture>false</enableChangeDataCapture>-->
    <fields>
        <fullName>AMT_TANF_INCOME_HH_GROSS__c</fullName>
        <description>Gross Household income without TANF</description>
        <label>Household income without TANF</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CDE_CAT_ACTIV__c</fullName>
        <description>Activity</description>
        <label>Activity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00797</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDE_FREQ_INCOME__c</fullName>
        <label>Income Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00341</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDE_PROG__c</fullName>
        <description>Program</description>
        <label>Program</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00373</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DTE_BEGIN_EFFEV__c</fullName>
        <label>Effective Begin Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_END_EFFEV__c</fullName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IDN_CASE_CHATS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case ID</label>
        <referenceTo>T_SBSD_CASE__c</referenceTo>
        <relationshipLabel>TANF Details</relationshipLabel>
        <relationshipName>CBMS_Additional_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IDN_CASE_INTFC__c</fullName>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>CBMS Case Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDN_EXTNL__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Identifier External</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NME_CO_WORKER__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CO Works Worker</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>TANF Details</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>TANF Details ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TANF Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules> 
        <fullName>AMT_TANF_INCOME_HH_GROSS_NOT_BLANK</fullName>
        <active>true</active>
        <description>Gross Household income without TANF cannot be less than 0.</description>
        <errorConditionFormula>AMT_TANF_INCOME_HH_GROSS__c &lt; 0</errorConditionFormula>
        <errorDisplayField>AMT_TANF_INCOME_HH_GROSS__c</errorDisplayField>
        <errorMessage>Gross Household income without TANF cannot be less than 0.</errorMessage>
    </validationRules>
    <!--Commented as part of CCCAP-10798-->
     <!--validationRules>
        <fullName>Effective_End_Date_GreaterThn_Begin_Date</fullName>
        <active>false</active>
        <description>Effective End Date must be equal to or greater than the Effective Begin Date.</description>
        <errorConditionFormula>DTE_END_EFFEV__c &lt; DTE_BEGIN_EFFEV__c</errorConditionFormula>
        <errorMessage>Effective End Date must be equal to or greater than the Effective Begin Date.</errorMessage>
    </validationRules-->
    <validationRules>
        <fullName>Closed_Case_Validation</fullName>
    <active>true</active>
    <description>Closed Case Validation</description>
    <errorConditionFormula>IF(IDN_CASE_CHATS__r.CLOSED_CASES_STATUS__c &gt;0, true, false)</errorConditionFormula>
    <errorMessage>Cannot update when the case is in Closed Status.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Income_Frequency_Required_Validation</fullName>
        <active>true</active>
        <description>Income Frequency is required if Gross Household income without TANF field is not empty</description>
        <errorConditionFormula>NOT(ISBLANK(AMT_TANF_INCOME_HH_GROSS__c)) &amp;&amp; ISBLANK(TEXT(CDE_FREQ_INCOME__c))</errorConditionFormula>
        <errorMessage>Income Frequency is required if Gross Household income without TANF field is not empty</errorMessage>
    </validationRules>
</CustomObject>