CHATS_SIT/force-app/main/default/objects/T_CBMS_ADDNL_INFO__c/validationRules/AMT_TANF_INCOME_HH_GROSS_NOT_BLANK.validationRule-meta.xml
<ValidationRule>
    <fullName>AMT_TANF_INCOME_HH_GROSS_NOT_BLANK</fullName>
    <active>true</active>
    <description>Gross Household income without TANF cannot be less than 0.</description>
    <errorConditionFormula>AMT_TANF_INCOME_HH_GROSS__c &lt; 0</errorConditionFormula>
    <errorDisplayField>AMT_TANF_INCOME_HH_GROSS__c</errorDisplayField>
    <errorMessage>Gross Household income without TANF cannot be less than 0.</errorMessage>
</ValidationRule>