CHATS_SIT/force-app/main/default/objects/T_CBMS_ADDNL_INFO__c/validationRules/Income_Frequency_Required_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Income_Frequency_Required_Validation</fullName>
    <active>true</active>
    <description>Income Frequency is required if Gross Household income without TANF field is not empty</description>
    <errorConditionFormula>NOT(ISBLANK(AMT_TANF_INCOME_HH_GROSS__c)) &amp;&amp; ISBLANK(TEXT(CDE_FREQ_INCOME__c))</errorConditionFormula>
    <errorMessage>Income Frequency is required if Gross Household income without TANF field is not empty</errorMessage>
</ValidationRule>